--- a/app/views/teams/show/_rankings_date_form.html.erb
+++ b/app/views/teams/show/_rankings_date_form.html.erb
@@ -2,6 +2,8 @@
 
 <div id="rankings_date_form">
   <%= form_with url: team_path(team), method: :get, html: { novalidate: true }, data: { turbo_stream: true, controller: 'custom-date-range form-validation' } do |form| %>
+    <%= form.hidden_field :tab, value: 'rankings' %>
+
     <div class="form-group">
       <%= form.label :rankings_date_range, 'Select date range', class: 'form-label' %>
 
