--- a/app/views/users/show.turbo_stream.erb
+++ b/app/views/users/show.turbo_stream.erb
@@ -1,26 +1,28 @@
-<%= turbo_stream.replace 'runs' do %>
-  <div id="runs" data-controller="filter-runs">
-    <% if @runs.present? %>
-      <% if 'this'.in?(@runs_date_range) %>
-        <p class="mt-6 mb-2 text-sm text-light"><%= @user == current_user ? 'You have' : "#{@user.first_name} has" %> logged <%= pluralize(@runs.size, 'run') %> <%= @runs_date_range %>.</p>
-      <% else %>
-        <p class="mt-6 mb-2 text-sm text-light"><%= @user == current_user ? 'You' : @user.first_name %> logged <%= pluralize(@runs.size, 'run') %> <%= @runs_date_range %>.</p>
-      <% end %>
-    <% end %>
-
-    <div class="mb-10 space-y-4 sm:space-y-6">
+<% if @tab == 'runs' %>
+  <%= turbo_stream.replace 'runs-list' do %>
+    <div id="runs-list" data-controller="filter-runs">
       <% if @runs.present? %>
-        <%= render @runs %>
-      <% else %>
-        <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
-          <p class="font-semibold">No runs found</p>
-          <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Sorry, we couldn&#8217;t find any runs in the selected date range.</p>
-        </div>
+        <% if 'this'.in?(@runs_date_range) %>
+          <p class="mt-6 mb-2 text-sm text-light"><%= @user == current_user ? 'You have' : "#{@user.first_name} has" %> logged <%= pluralize(@runs.size, 'run') %> <%= @runs_date_range %>.</p>
+        <% else %>
+          <p class="mt-6 mb-2 text-sm text-light"><%= @user == current_user ? 'You' : @user.first_name %> logged <%= pluralize(@runs.size, 'run') %> <%= @runs_date_range %>.</p>
+        <% end %>
       <% end %>
-    </div>
-  </div>
-<% end %>
 
-<%= turbo_stream.replace 'runs_date_form' do %>
-  <%= render 'users/runs_date_form', user: @user %>
+      <div class="mb-10 space-y-4 sm:space-y-6">
+        <% if @runs.present? %>
+          <%= render @runs %>
+        <% else %>
+          <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+            <p class="font-semibold">No runs found</p>
+            <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Sorry, we couldn&#8217;t find any runs in the selected date range.</p>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
+  <%= turbo_stream.replace 'runs_date_form' do %>
+    <%= render 'users/runs_date_form', user: @user %>
+  <% end %>
 <% end %>
