--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -49,7 +49,7 @@
         <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
           <button data-action="mousedown->modal#close" data-modal-id="removeMember" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
           <%= button_to "Remove #{member.default_name}",
-                        remove_member_team_path(team_id: team.id, user_id: member.id),
+                        team_remove_member_path(team_id: team.id, user_id: member.id),
                         method: :post,
                         class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
           %>
