--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -42,7 +42,7 @@
     <!-- Total Running Time Card -->
     <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Total Running Time</h2>
-      <div class="font-bold flex items-end gap-4">
+      <div class="font-bold flex flex-wrap items-end gap-x-4 gap-y-1">
         <% total_duration = user.total_duration %>
         <% precise_time_ago(total_duration, format: :short).split(' ').each do |time_part| %>
           <% if time_part.include?('mo') %>
