feat(landing): update landing page with up-to-date screenshots

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -39,6 +39,9 @@
     { image_name: 'team_form', desc: 'Team Settings Page' },
     { image_name: 'member', desc: 'Team Member Profile' },
     { image_name: 'trends', desc: 'Team Member Trends' },
+    { image_name: 'user_calendar', desc: 'User Calendar' },
+    { image_name: 'team_calendar', desc: 'Team Calendar' },
+    { image_name: 'team_events', desc: 'Team Events' },
     { image_name: 'rankings', desc: 'Team Rankings' },
     { image_name: 'featured', desc: 'Team Featured Runs' },
     { image_name: 'run_form', desc: 'New Run Form' },
