style(help): add `apple-share` icon for Safari PWA installation instructions

--- a/app/views/users/_help.html.erb
+++ b/app/views/users/_help.html.erb
@@ -69,7 +69,10 @@
     <div data-pwa-target="iosSafariInstructions" class="hidden mb-10">
       <h2 class="font-semibold">Safari (iOS &amp; iPadOS)</h2>
       <ul class="mt-1.5 list-disc ml-4 text-sm">
-        <li>Tap the <strong>Share</strong> button (square with arrow pointing up).</li>
+        <li>
+          Tap the <strong>Share</strong> button
+          (<%= inline_svg_tag 'icons/apple-share.svg', class: 'inline size-4 mb-1' %>).
+        </li>
         <li>Select <strong>&#8220;Add to Home Screen&#8221;</strong>.</li>
         <li>Tap <strong>Add</strong> to confirm.</li>
       </ul>
@@ -79,7 +82,10 @@
     <div data-pwa-target="macosSafariInstructions" class="hidden mb-10">
       <h2 class="font-semibold">Safari (macOS)</h2>
       <ul class="mt-1.5 list-disc ml-4 text-sm">
-        <li>Click the <strong>Share</strong> button in the toolbar (square with arrow pointing up).</li>
+        <li>
+          Click the <strong>Share</strong> button in the toolbar
+          (<%= inline_svg_tag 'icons/apple-share.svg', class: 'inline size-4 mb-1' %>).
+        </li>
         <li>Select <strong>&#8220;Add to Dock&#8221;</strong>.</li>
         <li>Click <strong>Add</strong> to confirm.</li>
       </ul>
